 - [#962] "Use as Template" is available on eprints in
    all buffers. "New Version" is now only available
    on eprints in the "archive" or "deletion" buffers.
 - [#962] When an item is cloned/copied from edit_eprint
    the user is now redirected to the first page of editing
    the new record. 
 - [#1027] Moved hard-wired "Continue" from Session.pm into
    the phrase file.
 - [#1025] Added missing phrase "lib/searchfield:help_itemref"

2005-05-24 cjg 

 - [#1047] If "skip_buffer" is in effect, the "new version" 
    and "use as template" buttons on edit_eprint make the
    new eprints appear in the live archive, not the submission
    buffer.
 - $args is now parsed to handlers in VLit
 - VLit now uses the system wide path for 'convert' rather
    than a hard-wired one.
 - VLit now has a "human" mode for area transclusions.

======================================================================
24/05/2005 - EPRINTS-2.3.12
======================================================================

2005-06-07 cjg
 
 - [#1140] If using mod_perl 2 then detect if the old or new API is
    in effect and make AnApache work accordingly.
 - Added a new method to AnApache : get_request which gets the current
    Apache request, using the old or new API. All calls to 
    Apache->request have been replaced with this.
 - [#1140] Modified ReqestWrapper2 to work correctly with the new
    API.
 - If expecting mod_perl 1 and it's not, then both API's are checked 
    for when testing if mod_perl 2 is installed to give advice
    about it.
 - Removed debug code in generate_static
 - Removed debug code in RequestWrapper2
 - [#1140] Modified configure to detect old and new API's for 
    mod_perl
 - Added new registration intro to archive-phrase-file so as not to
    change the message on existing archvies.

2005-06-09 cjg

 - [#1173] Replaced all occurrances of "archive" in user interface 
    with "repository" instead. (except for self-archiving and
    open-archives)
