@@ -547,7 +547,7 @@ mistakes. </p>
 <p>If you're satisfied that everything is correct and has been uploaded
 correctly, and have read, understood and complied with the agreement at
 the bottom of the page, click on the ``Deposit'' button to deposit your
-paper in the repository. It will then be put in the repository
+paper in the repository. It will then be put in the editorial
 buffer. </p>
 
 
